# TextBasedAdventure

./: .clang-format  .gitignore  CMakeLists.txt
include/project/: text_io.h
include/project/fsm/: BaseState.h  BaseStateMachine.h  GameStateMachine.h  InitializeState.h  InterfaceState.h  InterfaceStateMachine.h  SendOutputToUserState.h  ValidateGameState.h
src/: main.cpp
src/fsm/: BaseState.cpp  BaseStateMachine.cpp  GameStateMachine.cpp  InitializeState.cpp  SendOutputToUserState.cpp  ValidateGameState.cpp
src/text_io/: text_io.cpp
